--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html dir="rtl" lang="fa">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/images/logo-khodro.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>ثبت لاین | سامانه معاملات آنلاین</title>
   </head>
   <body >
     <div id="root"></div>
