--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html dir="rtl" lang="fa">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/images/logo-khodro.ico" />
+    <link rel="icon" type="image/svg+xml" href="/images/logo-khodro.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ثبت لاین | سامانه معاملات آنلاین</title>
   </head>
